Added definition details to lvspec.tex

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -3,6 +3,7 @@
 % Intended to be included within its own section.
 
 \begindeptgroup{pm}
+\label{s:specdfn}
 
 Portions of this section conform to \rfc{2119}: ``Key words for use in RFCs to
 Indicate Requirement Levels''. Certain terms from the RFC have been expressly
