--- a/lvspec.tex
+++ b/lvspec.tex
@@ -339,6 +339,11 @@ The formal language of the specification is important to resolve any
 ambiguities; part of such a resolution involves the formal and unambiguous
 definition of terms.
 
+\begin{center}
+  \includegraphics[width=0.8\textwidth]{images/words_that_end_in_gry.png}
+\end{center}
+
+\pnumon
 By default, \cmd{lvspec} will \emph{always} include specification definitions
 (see~\sref{specdfn}).
 
@@ -361,11 +366,21 @@ Additionally, the following options may be provided via~\verb|\documentclass|:
   the~\cmd{insuranceterms} option is used.
 \end{description}
 
+% TODO: this \pnumon won't be needed once sPxTeX is used, as it does not have
+% this problem
+\pnumon
 Additional sections can be added before\footnote{Ensures that section numbers do
 not change by disabling \cmd{draft} mode.} the authorization party sub-section
 (or, if the~\cmd{draft} option is not provided, then at the end of the
 definitions section) by using the \verb|\terminology| command.
 
+The definitions section is not a substitute for an English dictionary for
+undefined terms.
+
+\begin{center}
+  \includegraphics[width=0.7\textwidth]{images/period_speech.png}
+\end{center}
+\pnumon
 
 \section{Miscellaneous}
 % text has been carefully added to this line; margin, font, etc changes will
