List of table and list of figures will no longer be output after TOC; they will be output, if necessary, after chapter headings

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -633,7 +633,7 @@
   \end{@abstract}
 
   \dominitoc \dominilot \dominilof
-  \tableofcontents \listoftables \listoffigures
+  \tableofcontents
   \newpage
 
   % enable paragraph numbering
