Added short name for lvspec (yes, a joke)

--- a/lvspec.tex
+++ b/lvspec.tex
@@ -10,7 +10,7 @@
 \makeatother
 
 \begin{document}
-\title{LoVullo Specification Specifications}
+\title[Lov2Spec]{LoVullo Specification Specifications}
 \author{Mike Gerwitz}
 \titlecontent{%
   \includegraphics[scale=0.5]{images/dilbert-time.png}
@@ -201,8 +201,7 @@ in~\pref{ex:footer}).
 \begin{ex}
   \begin{verbatim}
 \begin{document}
-% optionally, use \title[Short Title]{Long Title}
-\title{LoVullo Specification Specifications}
+\title[Lov2Spec]{LoVullo Specification Specifications}
 \author{Mike Gerwitz}
 \titlecontent{%
   \includegraphics[scale=0.5]{images/dilbert-time.png}
