Siglines that need authorization are now added to the index to make them easier to find

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -186,6 +186,9 @@
           \PackageWarning{lvspec}{missing authorization party in%
             \space\thechapter.\thesection}%
         \else
+          \index{Needs Authorization@\textbf{Needs Authorization}!%
+            \@@margin@sig@dept
+          }%
           \space{\scriptsize(\@@margin@sig@dept)}%
           % clear the department, if necessary
           \@margin@sig@cleardept
