Added documentation for sigline-related index entries

--- a/lvspec.tex
+++ b/lvspec.tex
@@ -309,6 +309,10 @@ Clicking on the department in the signature line will take you to the
 ^[authorization parties] section of the definitions (in this document,
 \sref{authorize}).
 
+All unauthorized paragraphs are added to the index under the heading of
+``{\bf Needs Authorization}'' to ensure that nothing is missed, boldfaced to
+make the problem apparent.
+
 \subsection{Incomplete}
 \incomplete
 If a paragraph is incomplete and not yet ready for authorization, use
@@ -333,6 +337,11 @@ If a paragraph is incomplete because more information is needed, then use the
 command \verb|\incompletei|, which also includes the name of the department.
   \end{verbatim}
 \end{ex}
+
+All incomplete paragraphs are added to the index under the heading of
+``{\bf Incomplete}'' to ensure that nothing is missed, boldfaced to make the
+problem apparent.
+
 
 
 \section{Definitions}
