Specification terminology clarification

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -13,7 +13,7 @@ specification to resolve implementation issues and should exercise that ability.
 
 \begin{description}
   \dt{conforming implementation}
-  A software implementation that strictly conforms to this specification.
+  An implementation that meets all of the requirements of this specification.
 
   \dt{Deprecated}
   When used within context of this specification: the feature or requirement
@@ -38,8 +38,8 @@ specification to resolve implementation issues and should exercise that ability.
   specification has been removed and will not be superseded.
 
   \dt{section}
-  The section containing this term, as well as any subsections contained within
-  it.
+  The section containing the mention of this term, as well as any subsections
+  contained within it.
 
   \dt{Shall; Must}
   Denotes a mandatory requirement. If an implementation does not implement such
