Added NOC acronym to insurance dfns

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -21,6 +21,10 @@ see~\cite{gls-ins-calif}.
   A single line of business (e.g. ^[Property] or ^[General Liability]); contrast
   to ^[package].
 
+  \dt{NOC}
+  No Other Class Code---catch-all when no other class code is a fit for the
+  particular risk.
+
   \dt{package}
   Multiple lines of business; contrast to ^[monoline].
 
