Added LRO to insurance terms

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -17,6 +17,9 @@ see~\cite{gls-ins-calif}.
   An approximation of the cost of insurance based on incomplete or limited
   information provided by the applicant.
 
+  \dt{LRO}
+  Lessor's Risk Only---a lessor's risk policy.
+
   \dt{monoline}
   A single line of business (e.g. ^[Property] or ^[General Liability]); contrast
   to ^[package].
