\tref now uses \vref

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -453,7 +453,7 @@
 % refs
 \def\fref#1{Figure~\vref{f:#1}}
 \def\frefnopg#1{Figure~\ref{f:#1}}
-\def\tref#1{Table~\ref{t:#1} on page~\pageref{t:#1}}
+\def\tref#1{Table~\vref{t:#1}}
 \def\sref#1{\S\vref*{s:#1}}
 \def\srefnopg#1{\S\ref{s:#1}}
 \def\srefrange#1#2{\S\vrefrange{s:#1}{s:#2}}
