Added TRIA to insurance terms

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -40,6 +40,10 @@ see~\cite{gls-ins-calif}.
 
   \dt{risk}
   The individual or property to which the insurance policy or quote relates.
+
+  \dt{TRIA}
+  Terrorism Risk Insurance Act---signed into United~States federal ^law by
+  ^[George W.~Bush] on November~26, 2002.
 \end{description}
 
 \enddeptgroup
