--- a/task.sty
+++ b/task.sty
@@ -1,6 +1,7 @@
 % Task environment
 
 \RequirePackage[usenames,dvipsnames]{xcolor}
+\RequirePackage{etex}
 
 \newcommand\taskname{Requisite}
 
@@ -18,6 +19,10 @@
 % added to after reset; all-encompassing time interval
 \newcounter{taskamin}
 \newcounter{taskamax}
+
+% all-encompassing overlap interval
+\newcounter{taskaomin}
+\newcounter{taskaomax}
 
 \newcounter{subtaskc}[taskc]
 \setcounter{subtaskc}{0}
@@ -81,6 +86,9 @@
   {%
     \def\@@h{#1}%
     \goodbreak\leavevmode\@margin@sig
+    % enable overlap command
+    \let\overlap\@task@overlap
+    % typeset
     \llap{%
       \raisebox{-1.8\baselineskip}[0em][0em]{%
         \shortstack{%
@@ -117,6 +125,15 @@
     --#2%
   \fi
 }
+
+
+\def\@task@overlap#1{%
+  \def\@@hoverlap{#1}%
+  \@task@setregs#1||%
+  \addtocounter{taskaomin}{\@@hmin}%
+  \addtocounter{taskaomax}{\@@hmax}%
+}
+
 
 \def\@task@setregs#1-#2||{%
   \@@hmin#1\relax
@@ -185,18 +202,30 @@
   \advance\@@med \value{taskamin}%
   \advance\@@med \value{taskamax}%
   \divide\@@med by 2\relax
+  % calculate non-overlap
+  \newcount\@@nomin \newcount\@@nomax
+  \advance\@@nomin \value{taskamin}%
+  \advance\@@nomax \value{taskamax}%
+  \advance\@@nomin -\value{taskaomin}%
+  \advance\@@nomax -\value{taskaomax}%
+  % calculate overlap median
+  \newcount\@@omed
+  \advance\@@omed\@@nomin
+  \advance\@@omed\@@nomax
+  \divide\@@omed by 2\relax
   % write task stats to file (can be used for reporting by building consecutive
   % versions, concatenating the data, taking the last row for each date and
   % plotting, for example)
   \immediate\openout\@taskstats=taskstats.dat
-  \immediate\write\@taskstats{min max med cp vp}%
+  \immediate\write\@taskstats{min max med omin omax omed cp vp}%
   \immediate\write\@taskstats{%
     \arabic{taskamin} \arabic{taskamax} \the\@@med
+    \space\the\@@nomin \space \the\@@nomax \space\the\@@omed
     \space\the\@@hconf \space\the\@@hvari
   }%
   \immediate\closeout\@taskstats
   % reset counters
-  \setcounter{taskamin}{0}%
-  \setcounter{taskamax}{0}%
+  \setcounter{taskamin}{0}\setcounter{taskamax}{0}%
+  \setcounter{taskaomin}{0}\setcounter{taskaomax}{0}%
   \pnumrest
 }}
