Added booktabs package include for table rules

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -32,6 +32,7 @@
 \RequirePackage{amssymb}
 \RequirePackage{multirow}
 \RequirePackage{task}
+\RequirePackage{booktabs}
 
 
 % default hyperlink color
