Added EIFS and DEFS to insurance terms

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -13,6 +13,14 @@ see~\cite{gls-ins-calif}.
   \dt{applicant}
   The intended policy owner.
 
+  \dt{DEFS}
+  Direct-Applied Exterior Finish System; a type of building siding (compare to
+  ^[EIFS]).
+
+  \dt{EIFS}
+  Exterior Insulation and Finish System; a type of building siding (compare to
+  ^[DEFS]).
+
   \dt{indication}
   An approximation of the cost of insurance based on incomplete or limited
   information provided by the applicant.
