Nicole signed off on a number of terms

--- a/dfn/authparty.tex
+++ b/dfn/authparty.tex
@@ -5,31 +5,38 @@
 \index{authorization|(}
 \label{s:authorize}
 
+\sigauth{NL}
 This specification is currently a draft and requires that each requirement be
 verified and authorized for development.
 
+\sigauth{NL}
 An authorization indicates that a member of the indicated party or parties with
 sufficient knowledge on topic affirms that the requirement is---to the best of
 his or her knowledge---accurate and suitable for incorporation into an
 implementation of the specification.
 
+\sigauth{NL}
 \p{signcomp} A signature line next to content that is not a numbered paragraph
 is a \dfn{significant component}.
 
+\sigauth{NL}
 \begin{ex}
   \signline
   This example is not a paragraph but still contains a signature line; it is
   therefore a significant component under the definition of \pref{signcomp}.
 \end{ex}
 
+\sigauth{NL}
 Each paragraph and significant component of the specification, unless incomplete
 or previously authorized, contains a line that may be used for the initials of a
 member of the party indicated in parenthesis. If multiple parties are
 applicable, they will be separated with slashes.
 
+\sigauth{NL}
 Only a member of the party knowledgeable on the topic \shall provide their
 authorization.
 
+\sigauth{NL}
 An authorization is performed by (a)~signing one's initials on the provided line
 or (b)~indicating the paragraph number (or, for significant components, an
 appropriate notation containing at least the section number and a unique
@@ -37,24 +44,30 @@ identifier for the significant component itself) via some \unspecified\ method
 of correspondence that explicitly indicates each and every individual
 authorization.
 
+\sigauth{NL}
 A particular authorization is valid until the authorized paragraph or significant
 component is modified from its authorized form.
 
+\sigauth{NL}
 Signature lines with no authorization party listed \shallnot be authorized until
 at least one party has been chosen.
 
 \goodbreak
 \begin{description}
+  \sigauth{NL}
   \dt{C}
   Compliance department.
 
+  \sigauth{NL}
   \dt{IT}
   A programmer from the IT~department.
 
+  \sigauth{NL}
   \dt{PM}
   A project manager; defined as an individual who is responsible for making
   decisions regarding the direction and scope of the project.
 
+  \sigauth{NL}
   \dt{UW}
   An underwriter, assistant underwriter or someone with equivalent underwriting
   knowledge.
