--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -6,49 +6,62 @@
 
 \begindeptgroup{uw}
 
+\sigauth{NL}
 For a glossary of insurance terms from the state of California,
 see~\cite{gls-ins-calif}.
 
 \begin{description}
+  \sigauth{NL}
   \dt{applicant}
   The intended policy owner.
 
+  \sigauth{NL}
   \dt{DEFS}
   Direct-Applied Exterior Finish System; a type of building siding (compare to
   ^[EIFS]).
 
+  \sigauth{NL}
   \dt{EIFS}
   Exterior Insulation and Finish System; a type of building siding (compare to
   ^[DEFS]).
 
+  \sigauth{NL}
   \dt{indication}
   An approximation of the cost of insurance based on incomplete or limited
   information provided by the applicant.
 
+  \sigauth{NL}
   \dt{LRO}
   Lessor's Risk Only---a lessor's risk policy.
 
+  \sigauth{NL}
   \dt{monoline}
   A single line of business (e.g. ^[Property] or ^[General Liability]); contrast
   to ^[package].
 
+  \sigauth{NL}
   \dt{NOC}
   No Other Class Code---catch-all when no other class code is a fit for the
   particular risk.
 
+  \sigauth{NL}
   \dt{package}
   Multiple lines of business; contrast to ^[monoline].
 
+  \sigauth{NL}
   \dt{policy}
   Written insurance contract.
 
+  \sigauth{NL}
   \dt{quote}
   An estimate of the cost of insurance based upon information supplied to the
   insurance company by the applicant.
 
+  \sigauth{NL}
   \dt{risk}
   The individual or property to which the insurance policy or quote relates.
 
+  \sigauth{NL}
   \dt{TRIA}
   Terrorism Risk Insurance Act---signed into United~States federal ^law by
   ^[George W.~Bush] on November~26, 2002.
